<resources>
    <string name="app_name">Weather</string>
    <string name="action_city_list">Saved</string>
    <string name="action_weather">Weather</string>
    <string name="action_settings">Settings</string>
    <string name="search_bar_hint">Search city</string>
    <string name="weather_icon">Weather icon</string>
    <string name="metric_temperature" translatable="false">%.0f°C</string>
    <string name="refresh_icon">Refresh</string>
    <string name="current_weather_icon">Current weather icon</string>
    <string name="feels_like_icon">Feels like icon</string>
    <string name="wind_icon">Wind icon</string>
    <string name="humidity_icon">Humidity</string>
    <string name="pressure_icon">Pressure icon</string>
    <string name="feels_like">Feels like</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="standard_speed" translatable="false">%.2f meter/sec</string>
    <string name="percent" translatable="false">%d %%</string>
    <string name="hpa" translatable="false">%d hPa</string>
    <string name="visibility">Visibility</string>
    <string name="wind_direction">Wind direction</string>
    <string name="visibility_icon">Visibility icon</string>
    <string name="wind_direction_icon">Wind direction icon</string>
    <string name="meter" translatable="false">%d m</string>
    <string name="temperature_unit">Temperature unit</string>
    <string name="refresh_time">Refresh time</string>
    <string name="temperature_unit_details">Select the unit in which the temperature will be displayed in the application</string>
    <string name="refresh_time_details">Select the time after which the application should automatically refresh the data</string>
    <string name="config_shared_preferences_name" translatable="false">config</string>
    <string name="temperature_unit_default" translatable="false">metric</string>
    <string name="search_icon">Search icon</string>
    <string name="metric_speed" translatable="false">%.2f meter/sec</string>
    <string name="imperial_speed" translatable="false">%.2f miles/hour</string>
    <string name="standard_temperature" translatable="false">%.0f K</string>
    <string name="imperial_temperature" translatable="false">%.0f°F</string>
    <string name="empty_city_list">City list is empty</string>
    <string name="refresh_status_failed">Refresh failed</string>
    <string name="internet_status">No internet connection available</string>
    <string name="confirm_remove_city_dialog_title">Remove city</string>
    <string name="confirm_remove_city_dialog_message">Are you sure you want to remove this city?</string>
    <string name="confirm_remove_city_dialog_positive">Remove</string>
    <string name="confirm_remove_city_dialog_negative">Cancel</string>
</resources>