<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temperature_unit"
            android:textSize="16sp">

        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/temperature_unit_details"
                android:textSize="11sp">

            </TextView>
            <Spinner
                android:id="@+id/temperature_unit_dropdown"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:spinnerMode="dropdown">

            </Spinner>
        </LinearLayout>
    </LinearLayout>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.divider.MaterialDivider>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refresh_time"
            android:textSize="16sp">

        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/refresh_time_details"
                android:textSize="11sp">

            </TextView>
            <Spinner
                android:id="@+id/refresh_time_dropdown"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:spinnerMode="dropdown">

            </Spinner>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>